--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "numeralize-rus-ukr",
   "version": "1.0.2",
-  "description": "Converts a number to words for Russian/Ukrainian languages. Написание числительных на русском языке с учётом пола и падежа.",
+  "description": "Converts a number to words for Russian/Ukrainian languages. Написание числительных на русском и украинском языке с учётом пола и падежа.",
   "main": "index.js",
   "scripts": {
     "test": "npm run test:js; npm run test:ts",
