--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "build/index.js",
   "scripts": {
     "build": "babel src --presets babel-preset-es2015 --out-dir build",
+    "prepublish": "npm run build",
     "test": "npm run build && ./node_modules/.bin/mocha"
   },
   "keywords": [
