--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "babel src --presets babel-preset-es2015 --out-dir build",
     "prepublish": "npm run build",
-    "test": "npm run build && ./node_modules/.bin/mocha"
+    "test": "./node_modules/.bin/mocha"
   },
   "keywords": [
     "russian",
